--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,28 @@
-<html>
-<head>
-	<title>formdata : collect data on all devices</title>
-</head>
-<body>
-	<div class="container">
-		<div class="header"></div>
-		<%= title %>
-	</div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+    
+    <head>
+        <% include partials/head-content.html %>
+        <title>formdata : collect data on all devices</title>
+    </head>
+    
+    <body>
+        <div class="container">
+            <% include partials/header.html %>
+            <div class="row marketing">
+                <div class="col-lg-12">
+                    <h4>Overview</h4>
+                    <p>formdata is an open-source, client-agnost, customizable, free and simple data collection platform that allows you to create questionnaire
+                        of your survey and allows your users to input rich data in response.</p>
+                    <h4>Source Code</h4>
+                    <p>
+                        Governed by MIT license: 
+                        <a href="http://github.com/tsaqib/formdata/">http://github.com/tsaqib/formdata/</a>
+                    </p>
+                </div>
+            </div>
+            <% include partials/footer.html %>
+        </div>
+    </body>
+
 </html>
