--- a/views/signup.html
+++ b/views/signup.html
@@ -11,8 +11,9 @@
             <% include partials/header.html %>
             <div class="row marketing">
                 <div class="col-lg-12">
-                    <h4><%= message %></h4>
-                    <p><%= error %></p>
+                    <h4>Login</h4>
+                    <p>Cool signup UI.
+                    </p>
                 </div>
             </div>
             <% include partials/footer.html %>
