Added dynamic nav. selection class -> active

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,13 +1,13 @@
         <div class="header clearfix">
             <nav>
-                <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active">
+                <ul class="nav nav-pills pull-right"> 
+                    <li class="<%= active == 'home' ? 'active' : ''; %>">
                         <a href="/">Home</a>
                     </li>
-                    <li role="presentation">
+                    <li class="<%= active == 'signup' ? 'active' : ''; %>">
                         <a href="/signup">Sign up</a>
                     </li>
-                    <li role="presentation">
+                    <li class="<%= active == 'login' ? 'active' : ''; %>">
                         <a href="/login">Login</a>
                     </li>
                 </ul>
