--- a/views/partials/head-content.html
+++ b/views/partials/head-content.html
@@ -6,8 +6,8 @@
         <meta name="author" content="Tanzim Saqib">
         <!--<link rel="icon" href="../../favicon.ico">-->
         
-        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="stylesheets/style.css" rel="stylesheet">
+        <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/stylesheets/style.css" rel="stylesheet">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
